# Variation-in-the-Management-of-Culture-Positive-Empyema

./: .gitignore  LICENSE  README.md  clif_config_template.json  pyproject.toml
AGG/: aggregate_table1.py
code/: 01_cohort.py  02_table1.py  convert_parquet_to_csv.py
